fixed so it doesnt overflow the div

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -92,9 +92,20 @@
 }
 
 #chat-container{
-  border: 1px solid red;
+  border: 3px solid red;
   display: inline-block;
   height: 200px;
   width: 500px;
+}
+
+#input {
+  width: 100%;
+  border-bottom: 2px solid black;
+  position: static;
+}
+
+#box {
+  height: 90%;
+  overflow: scroll;
 }
 
